@@ -1,6 +1,11 @@
 Release history for Dist-Zilla-Role-BundleDeps
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002001, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +10 ↑3 -2 (recommends: +1, suggests: ↑2)
+ - test: +1 (recommends: +1 ↑1 ↓1)
 
  [Documentation]
  - Crossreference Dzil::Plugin::BundleInspector (Thanks Olivier Mengué/DOLMEN)
